--- a/DesignerRHN/DesignerRHN-war/web/clasepension.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/clasepension.xhtml
@@ -16,7 +16,8 @@
                         <fieldset style="position: absolute;top: 110px;left: 10px;height: 320px;width: 830px; border-radius: 10px; text-align: left">
                             <legend style="font-size: 14px; color: blue"><strong>Clase Pensión</strong></legend>
 
-                            <p:dataTable id="datosClasesPensiones" var="info" rowKey="#{info.secuencia}"  rowIndexVar="indice" style="width: 810px ; border: 1px;"                           
+                            <p:dataTable id="datosClasesPensiones" var="info" rowKey="#{info.secuencia}"  
+                                         rowIndexVar="indice" style="width: 810px ; border: 1px;"                           
                                          value="#{controlClasesPensiones.listClasesPensiones}" 
                                          scrollable="true"
                                          scrollHeight="#{controlClasesPensiones.tamano}"
