--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -14,7 +14,7 @@
         <title>Aplicativo de Nomina Designer RHN</title>
     </h:head>
 
-    <h:body onload="iniciarScrollEmpleado();iniciarScrollEmpleador();">
+    <h:body onload="iniciarScrollEmpleado();">
         <div id="top"  class="top" style="background-image: url(Imagenes/fondoencabezado.png); height: 80px; background-repeat: no-repeat; background-size: 100% 100%;">
             <ui:insert name="banner">
                 <h:form>
