--- a/DesignerRHN/DesignerRHN-war/web/EmplVigenciaJornada.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVigenciaJornada.xhtml
@@ -115,7 +115,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooNombreJornada" value=""/>
+                                        <p:commandButton style="width: 170px; margin: -14px; height: 26px;  border: none; color: blue" id="fooNombreJornada" action="jornadaslaborales" value=""/>
                                     </f:facet>
                                 </p:column>
 
