--- a/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/novedad.xhtml
@@ -47,7 +47,7 @@
                                 <p:commandButton style="position: absolute; top: 105px;left: 90px; width: 180px; height: 25px; " value="Parametros Tiempos..." actionListener="#{controlNovedad.recibir('Parametros Tiempos')}" action="Impresion"></p:commandButton>
                                 <p:commandButton style="position: absolute; top: 145px;left: 90px; width: 180px; height: 25px; " value="Novedad Horas Extras..." actionListener="#{controlNovedad.recibir('Novedad Horas Extras')}" action="Impresion"></p:commandButton>
                                 <p:commandButton style="position: absolute; top: 185px;left: 90px; width: 180px; height: 25px; " value="Aprovación Horas Extras..." actionListener="#{controlNovedad.recibir('Aprovacion Horas Extras')}" action="Impresion"></p:commandButton>
-                                <p:commandButton style="position: absolute; top: 225px;left: 90px; width: 180px; height: 25px; " value="Ausentismos..." actionListener="#{controlNovedad.recibir('Ausentismos')}" action="Impresion" ></p:commandButton>
+                                <p:commandButton style="position: absolute; top: 225px;left: 90px; width: 180px; height: 25px; " value="Ausentismos..."  action="atausentismos" ></p:commandButton>
                             </fieldset>
                             <fieldset style="position: absolute; top: 280px ;left: 265px;height: 103px; width: 265px; border-radius: 10px">
                                 <legend style=" color: blue"><strong>Préstamos</strong></legend>
